--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/main.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/main.css
@@ -6,7 +6,7 @@
   --txt-color-600: #222;
 }
 #wrap {
-  height: 2000px;
+  height: 5000px;
 }
 #header {
   position: fixed;
@@ -166,9 +166,7 @@
 /* main_video 메인 비디오 */
 .main_video  {
   position: relative;
-}
-.main_video .swiper {
-  /* position: relative; */
+  cursor: grab;
 }
 .main_video .swiper-slide {
   width: 100%;
@@ -180,31 +178,57 @@
   object-fit: cover;
 }
 /* 페이지네이션 */
-.main_video .swiper-pagination {
-  position: absolute;
-  /* width:100%가 기본으로 적용되어 있어 auto로 풀어줌 */
-  width: auto;
-  right: 50px;
-  bottom: 50px;
-  text-align: right;
-  color: #fff;
-  border: 2px solid red;
-} 
-/* 페이지 next  */
 .main_video .pagination_wrap {
   position: absolute;
-  left: 0;
-  top: 50%;
-  /* transform: translateX(-50%); */
-  border: 5px solid red;
-  width: 100%;
-  height: 200px;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 20px;
+  /* border: 5px solid red; */
+  z-index: 1000;
+  width: 90%;
+  max-width: 1280px;
+  height: 100px;
 }
+/* pagination number */
+.main_video .page_num {
+  font-size: 13px;
+  color: rgba(255,255,255,0.4);
+  font-weight: 700;
+  text-align: right;
+  position: absolute;
+  right: 0;
+  bottom: 10px;
+}
+.main_video .page_num .current {
+  color: #fff;
+}
+.main_video .swiper-pagination {
+  text-align: right;
+  color: #a9a9a9;
+} 
 
+/* swiper progress bar */
+.main_video .swiper-pagination-progressbar {
+  width: 100%;
+  height: 1px;
+  margin-top: 5px;
+  background: #ccc;
+}
+.main_video .swiper-pagination-progressbar-fill {
+  height: 3px;
+  background: #fff;
+  top: -1px;
+}
+.main_video .swiper-scrollbar {
+  display: none;
+}
+/* pagination button */
 .main_video .swiper-button-next {
   top: auto;
-  right: 50px;
-  bottom: 100px;
+  right: 0;
+  bottom: 80px;
+  width: 31px;
+  height: 26px;
 }
 .main_video .swiper-button-next::after {
   content: '';
@@ -213,7 +237,60 @@
   background: url(../images/video_next_btn.png)no-repeat;
 }
 
+/* 메인 인트로 */
+.main_intro .tit_wrap {
+  padding: 110px 0 100px;
+  position: relative;
+}
+.main_intro .tit_wrap::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 1px;
+  height: 40px;
+  background: var(--txt-color-600);
+}
+.main_intro .tit_wrap h2 {
+  text-align: center;
+  color: var(--txt-color-600);
+  font-size: 66px;
+}
+.main_intro .tit_wrap h2 span {
+  display: block;
+  font-weight: 400;
+  padding-bottom: 15px;
+}
+.main_intro .tit_wrap h2 strong {
+  font-weight: 700;
+}
 
+.main_intro .inner {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0 10px;
+}
+.main_intro .col_left {
+  width: calc(55% - 5px);
+  padding-top: 100px;
+}
+.main_intro .col_left p {
+  font-size: 30px;
+  padding-bottom: 55px;
+  line-height: 1.6;
+  font-weight: 500;
+  color: var(--txt-color-600)
+}
+.main_intro .col_right {
+  width: calc(60%- 5px);
+}
+.main_intro .col_right img {
+  max-width: 150%;
+}
 /* 태블릿 분기점 */
 @media (max-width: 1200px) {
   #container {
@@ -248,10 +325,11 @@
   #header .lang {
     margin-right: 0;
   }
-  /* 태블릿 아코디언 버튼 .m_gnb_wrap*/
+  /* 태블릿 사이드메뉴 버튼 .m_gnb_wrap*/
   #header .m_gnb_wrap {
     display: block;
     position: fixed;
+    z-index: 9999;
     right: 0;
     top: 0;
     width: 75%;
@@ -264,6 +342,12 @@
   #header .m_gnb_wrap.on {
     transform: translateX(0);
   }
+  /* 태블릿 사이드 메뉴 스크롤 */
+  #header .scroll {
+    overflow: auto;
+    height: 100%;
+  }
+
   #header .m_gnb>li>a {
     display: block;
     font-size: 16px;
@@ -358,6 +442,30 @@
     border: none;
     background: none;
   }
+
+  /* 태블릿 메인 인트로 .main_intro */
+  .main_intro .tit_wrap {
+    padding: 150px 0 70px;
+  }
+  .main_intro .tit_wrap h2 {
+    font-size: 5.5vw;
+  }
+  .main_intro .tit_wrap h2 span {
+    padding-bottom: 0;
+  }
+  .main_intro .col_left {
+    width: calc(40% - 5px);
+  }
+  .main_intro .col_left p {
+    font-size: 2.1vw;
+    padding-bottom: 36px;
+  }
+  .main_intro .col_right {
+    width: calc(60% - 5px);
+  }
+  .main_intro .col_right img {
+    max-width: 100%;
+  }
 }
 /* 모바일 분기점 */
 @media (max-width: 767px) {
@@ -413,5 +521,50 @@
     position: absolute;
     left: 50%;
     top: 6px;
+  }
+  /* 모바일 메인 비디오 .main_video */
+  .main_video .pagination_wrap {
+    bottom: 0;
+    height: 50px;
+  }
+  .main_video .page_num {
+    bottom: 20px;
+  }
+  .main_video .swiper-button-next {
+    display: none;
+  }
+
+  /* 모바일 메인 인트로 .main_intro */
+  .main_intro .tit_wrap {
+    padding: 50px 0 20px;
+  }
+  .main_intro .tit_wrap::after {
+    bottom: -10px;
+    height: 22px;
+  }
+  .main_intro .tit_wrap h2 {
+    font-size: 6vw;
+  }
+  .main_intro .tit_wrap h2 span {
+    padding-bottom: 0;
+  }
+
+  .main_intro .inner {
+    flex-wrap: wrap;
+  }
+  .main_intro .col_left {
+    width: calc(100%);
+    padding-top: 40px;
+  }
+  .main_intro .col_left p {
+    font-size: 3.5vw;
+    padding-bottom: 15px;
+  }
+  .main_intro .col_right {
+    width: calc(100%);
+  }
+  .main_intro .col_right img {
+    padding-left: 80px;
+    max-width: 100%;
   }
 }
