--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/common.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/common.css
@@ -44,7 +44,7 @@
 /* 컬러 변수 */
 :root {
   --point--color1: #cad401;
-  --point--color2: #007aff;
+  --point--color2: #019fe8;
   --txt-color-400: #888;
   --txt-color-500: #191b1d;
   --txt-color-600: #222;
