--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/main.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/main.css
@@ -1,13 +1,11 @@
 :root {
   --point--color1: #cad401;
-  --point--color2: #007aff;
+  --point--color2: #019fe8;
   --txt-color-400: #888;
   --txt-color-500: #191b1d;
   --txt-color-600: #222;
 }
-#wrap {
-  height: 5000px;
-}
+
 #header {
   position: fixed;
   left: 0;
@@ -266,7 +264,7 @@
 }
 
 .main_intro .inner {
-  max-width: 1280px;
+  max-width: 1320px;
   margin: 0 auto;
   padding: 0 20px;
   display: flex;
@@ -299,7 +297,7 @@
   margin-top: 130px;
 }
 .main_worker .inner {
-  max-width: 1280px;
+  max-width: 1320px;
   padding: 0 20px;
   margin: 0 auto;
 }
@@ -420,7 +418,257 @@
   background-color: #ddd;
 }
 
+/* 메인 뉴스 .main_news */
+.main_news {
+  padding-bottom: 210px;
+}
+.main_news .inner {
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 20px;
+  position: relative;
+}
+.main_news h2 {
+  font-size: 65px;
+  padding-bottom: 80px;
+  font-weight: 700;
+  color: var(--txt-color-600);
+}
+.main_news .news {
+  display: flex;
+}
+.main_news .news li {
+  width: 28.125%;
+}
+.main_news .news li + li {
+  margin-left: 7.8125%;
+}
 
+.main_news .txt_wrap {
+  margin-top: 40px;
+}
+.main_news .category {
+  font-size: 14px;
+}
+.main_news .category a {
+  font-weight: 700;
+  padding-right: 7px;
+}
+.main_news .category span {
+  padding-left: 7px;
+  color: #aeaeae;
+  position: relative;
+}
+.main_news .category span::before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: -2px;
+  top: 3px;
+  width: 1px;
+  height: 9px;
+  background: rgba(0, 0, 0, 0.1);
+}
+.main_news .tit {
+  display: block;
+  font-size: 24px;
+  color: var(--txt-color-500);
+  font-weight: 700;
+  padding-top: 10px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+.main_news .txt {
+  font-size: 15px;
+  color: var(--txt-color-400);
+  line-height: 1.4em;
+  padding-top: 20px;
+}
+
+.main_news .more_btn {
+  position: absolute;
+  display: inline-block;
+  right: 50px;
+  top: 40px;
+  font-size: 24px;
+  font-weight: 700;
+  z-index: 0;
+  transition: all 0.15s;
+}
+.main_news .more_btn:hover {
+  right: 40px;
+}
+.main_news .more_btn::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50%;
+  background: var(--point--color2);
+  z-index: -1;
+}
+.main_news .more_btn::after {
+  content: '';
+  position: absolute;
+  right: -30px;
+  top: 12px;
+  width: 17px;
+  height: 8px;
+  background: url(../images/slide_next.png) no-repeat;
+}
+
+/* 메인 커리어 .main_careers */
+.main_careers {
+  padding-bottom: 125px;
+  margin-bottom: 40px;
+}
+.main_careers .inner {
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 20px;
+  position: relative;
+}
+.main_careers h2 {
+  font-size: 65px;
+  padding-bottom: 80px;
+  font-weight: 700;
+  color: var(--txt-color-600);
+}
+
+.main_careers .txt_box {
+  position: absolute;
+  left: 20px;
+  bottom: -75px;
+  background: #fff;
+  padding-top: 50px;
+  padding-right: 65px;
+}
+.main_careers .txt_box p {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.main_careers .more_btn {
+  position: absolute;
+  display: inline-block;
+  right: 50px;
+  top: 40px;
+  font-size: 24px;
+  font-weight: 700;
+  z-index: 0;
+  transition: all 0.15s;
+}
+.main_careers .more_btn:hover {
+  right: 40px;
+}
+.main_careers .more_btn::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50%;
+  background: var(--point--color2);
+  z-index: -1;
+}
+.main_careers .more_btn::after {
+  content: '';
+  position: absolute;
+  right: -30px;
+  top: 12px;
+  width: 17px;
+  height: 8px;
+  background: url(../images/slide_next.png) no-repeat;
+}
+
+/* footer */
+#footer {
+  background: #f3f3f3;
+}
+#footer .inner {
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+#footer .footer_top {
+  display: flex;
+  padding: 50px 0;
+}
+#footer .col_left {
+  width: 50%;
+}
+#footer .logo {
+  margin-bottom: 30px;
+}
+#footer .address {
+  font-size: 13px;
+  color: #999;
+  margin-bottom: 15px;
+  line-height: 1.6;
+}
+#footer .award {
+  margin-bottom: 30px;
+}
+
+#footer .col_right {
+  width: 50%;
+}
+#footer .footer_menu {
+  display: flex;
+  gap: 0 60px;
+}
+#footer .footer_menu>li>a {
+  display: block;
+  font-size: 15px;
+  margin-bottom: 20px;
+  color: var(--txt-color-600);
+}
+#footer .footer_menu .menu_list a {
+  font-size: 14px;
+  color: #999;
+  transition: all 0.15s;
+}
+
+#footer .footer_bottom {
+  padding: 30px 0;
+  border-top: 1px solid #ddd;
+  display: flex;
+  position: relative;
+}
+#footer .copyright {
+  font-size: 14px;
+  color: #999;
+}
+#footer .family_btn {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  color: #999;
+  padding: 15px 0;
+  font-size: 14px;
+  width: 220px;
+  text-align: left;
+  border: 1px solid red;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#footer .family_btn::after {
+  content: '';
+  width: 8px;
+  height: 12px;
+  border: 5px solid transparent;
+  border-bottom: 7px solid #999;
+}
+
+#footer .family {
+  display: none;
+}
 
 /* 태블릿 분기점 */
 @media (max-width: 1200px) {
@@ -632,6 +880,7 @@
     padding-left: 21px;
     font-weight: 300;
   }
+
   /* 태블릿 prev next button */
   .main_worker .btn_wrap {
     width: 130px;
@@ -648,6 +897,27 @@
   }
   .main_worker .swiper-button-next::before {
   right: -35px;
+  }
+
+  /* 태블릿 메인 뉴스 .main_news */
+  .main_news .tit {
+    font-size: 20px;
+    padding-top: 12px;
+  }
+  .main_news .txt {
+    padding-top: 29px;
+  }
+
+  .main_news .more_btn::after {
+    right: -25px;
+  }
+
+  /* 태블릿 메인 커리어 .main_careers */
+  .main_careers .more_btn::after {
+    right: -25px;
+  }
+  .main_careers .txt_box p {
+    font-size: 31px;
   }
 }
 
@@ -805,42 +1075,111 @@
     display: none;
   }
 
-  /* 모바일 prev next button */
-    .main_worker .arrow_btn {
-      font-size: 13px;
-    }
-    .main_worker .swiper-button-prev {
-      right: 100px;
-    }
-    .main_worker .btn_wrap {
-      right: -10px;
-      justify-content: initial;
-    }
-    .main_worker .arrow_btn {
-      right: 30px;
-    }
-    .main_worker .swiper-button-prev:hover {
-      transform: translateX(-5px);
-    }
-    .main_worker .swiper-button-next:hover {
-      transform: translateX(5px);
-    }
-    .main_worker .arrow_btn::before {
-      left: -15px;
-      bottom: 3px;
-      width: 17px;
-      height: 8px;
-      background: url(../images/slide_prev.png) no-repeat;
-    }
-    .main_worker .swiper-button-next::before {
-      left: auto;
-      right: -15px;
-      background: url(../images/slide_next.png) no-repeat;
-    }
-    .main_worker .swiper .bar {
-      position: absolute;
-      bottom: 0;
-      left: calc(50% - 10px);
-      transform: translateY(-50%);
-    }
+/* 모바일 prev next button */
+  .main_worker .arrow_btn {
+    font-size: 13px;
+  }
+  .main_worker .swiper-button-prev {
+    right: 100px;
+  }
+  .main_worker .btn_wrap {
+    right: -10px;
+    justify-content: initial;
+  }
+  .main_worker .arrow_btn {
+    right: 30px;
+  }
+  .main_worker .swiper-button-prev:hover {
+    transform: translateX(-5px);
+  }
+  .main_worker .swiper-button-next:hover {
+    transform: translateX(5px);
+  }
+  .main_worker .arrow_btn::before {
+    left: -15px;
+    bottom: 3px;
+    width: 17px;
+    height: 8px;
+    background: url(../images/slide_prev.png) no-repeat;
+  }
+  .main_worker .swiper-button-next::before {
+    left: auto;
+    right: -15px;
+    background: url(../images/slide_next.png) no-repeat;
+  }
+  .main_worker .swiper .bar {
+    position: absolute;
+    bottom: 0;
+    left: calc(50% - 10px);
+    transform: translateY(-50%);
+  }
+
+  /* 모바일 메인 뉴스 .main_news */
+  .main_news {
+    padding-bottom: 55px;
+  }
+  .main_news h2 {
+    font-size: 22px;
+    padding-bottom: 29px;
+  }
+  .main_news .news {
+    flex-wrap: wrap;
+  }
+  .main_news .news li {
+    width: 100%;
+  }
+  .main_news .news li + li {
+    margin-left: 0;
+    margin-top: 40px;
+  }
+
+  .main_news .category {
+    font-size: 13px;
+  }
+  .main_news .tit {
+    font-size: 17px;
+    padding-top: 11px;
+  }
+  .main_news .txt {
+    font-size: 13px;
+    padding-top: 16px;
+  }
+
+  .main_news .more_btn {
+    top: 7px;
+    font-size: 15px;
+  }
+  .main_news .more_btn::after {
+    top: 6px;
+    right: -25px;
+  }
+
+  /* .모바일 메인 커리어 .main_careers */
+  .main_careers {
+    /* footer 이후 다시 살펴볼것 */
+    padding-bottom: 55px;
+    margin-bottom: 0;
+  }
+  .main_careers h2 {
+    font-size: 22px;
+    padding-bottom: 29px;
+  }
+  .main_careers .txt_box {
+    padding-top: 15px;
+    padding-right: 18px;
+    bottom: -25px;
+  }
+  .main_careers .txt_box p {
+    font-size: 12px;
+  }
+
+  
+  .main_careers .more_btn {
+    top: 7px;
+    font-size: 15px;
+  }
+  .main_careers .more_btn::after {
+    top: 6px;
+    right: -25px;
+  }
 }
