--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/common.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/css/common.css
@@ -45,9 +45,9 @@
 :root {
   --point--color1: #cad401;
   --point--color2: #019fe8;
-  --txt-color-400: #888;
-  --txt-color-500: #191b1d;
-  --txt-color-600: #222;
+  --gray-400: #888;
+  --gray-500: #191b1d;
+  --gray-600: #222;
 }
 
 /* rem단위사용시 주석풀고 사용 (24.03.14 16:53) */
@@ -100,7 +100,7 @@ strong {
 /* -webkit- 크롬, 사파리, 다른브라우저에서 사용하기도함 */
 a {
   text-decoration: none;
-  color: var(--txt-color-500);
+  color: var(--gray-500);
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -162,7 +162,7 @@ body, input, select, textarea, button, table {
   /* 24.03.27 11:45 rem으로 변경 */
   /* 24.03.27 12:51 px로 변경 */
   font-size: 18px; 
-  color: var(--txt-color-500);
+  color: var(--gray-500);
 }
 
 /* 스킵 네비 */
@@ -291,58 +291,43 @@ input[type='number'] {
 input[type='checkbox'] + label {
   color: #333;
   cursor: pointer;
-  position: relative;
+  display: inline-flex;
+  /* 폰트크기 16 * 줄간격(1.4내외) =  23px이하인 경우 하단 간격 발생 */
+  vertical-align: top;
+  align-items: center;
+  gap:0 8px;
 }
 input[type='checkbox'] + label::before {
   content: '';
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  border: 1px solid #dddddd;
-  vertical-align: middle;
-  margin-right: 6px;
+  width: 18px;
+  height: 18px;
+  border: 1px solid #999;
 }
-input[type='checkbox']:checked + label::after {
-  content: '';
-  position: absolute;
-  left: 1px;
-  top: 4px;
-  width:24px;
-  height: 24px;
-  background: url(../images/common/check.svg) no-repeat 0 0 / 18px;
+input[type='checkbox']:checked + label::before {
+  background: url(../images/common/check.svg) no-repeat 50% 50% / 100%;
 }
 
 /* radio 공통 */
 .radio_wrap {
   display: inline-block;
-  margin-right: 10px;
 }
 input[type='radio'] + label {
   cursor: pointer;
   position: relative;
-  display: inline-block;
+  display: inline-flex;
+  vertical-align: top;
+  align-items: center;
+  gap:0 8px;
 }
-input[type='radio'] + label:before {
+input[type='radio'] + label::before {
   content: '';
-  display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
-  border: 1px solid #ddd;
-  vertical-align: middle;
-  margin-right: 6px;
+  border: 1px solid #999;
 }
-input[type='radio']:checked + label:after {
-  content: '';
-  position: absolute;
-  left: 5px;
-  top: 50%;
-  transform: translateY(-50%);
-  margin-top: 1px;
-  width: 10px;
-  height: 10px;
-  background: #333;
-  border-radius: 50%;
+input[type='radio']:checked + label::before {
+  background: url(../images/common/circle.svg) no-repeat 50% 50% / 12px;
 }
 
 /* select 공통 */
@@ -353,11 +338,12 @@ select::-ms-expand {
 
 .select_wrap {
   display: inline-block;
-  width: 192px;
-  border: 1px solid #dddddd;
+  width: 150px;
+  height: 51px;
+  border: none;
+  border-bottom: 1px solid #000;
   position: relative;
   z-index: 0;
-  margin-right: 10px;
 }
 .select_wrap:after {
   content: '';
@@ -365,18 +351,31 @@ select::-ms-expand {
   right: 12px;
   top: 50%;
   z-index: -1;
-  transform: translateY(-25%);
-  border: 6px solid transparent;
-  border-top-color: #333;
+  transform: translateY(-50%);
+  width: 15px;
+  height: 10px;
+  background: url(../images/select_bullet.png) no-repeat;
+  /* border: 6px solid transparent;
+  border-left-width:5px;
+  border-right-width:5px;
+  border-top-color:#333; */
 }
 .select_wrap select {
-  width: 100%;
+  width: 112px;
+  font-size: 16px;
+  color: #111;
+  font-weight: 700;
   border: none;
-  height: 38px;
+  height: 50px;
   padding: 0 10px;
   cursor: pointer;
   background: none;
 }
+.select_wrap select:focus {
+  border: 2px solid #111;
+  border-radius: 4px;
+}
+
 
 /* select 커스텀 */
 .select_custom {
@@ -428,16 +427,16 @@ select::-ms-expand {
 textarea {
   width: 100%;
   border: none;
-  background: #aaa2a2;
+  background: #f8f8f8;
   padding: 15px;
 }
 
 /* 파일선택 */
 .file_wrap {
   display: inline-block;
-  border: 1px solid #ddd;
+  border: 1px solid #999;
   width: 100%;
-  position: relative;
+  display: flex;
 }
 .file_wrap input[type='text'] {
   height: 38px;
@@ -446,17 +445,13 @@ textarea {
   padding: 0 10px;
 }
 .file_wrap label {
-  position: absolute;
-  right: 0;
-  top: 0;
   width: 98px;
-  height: 100%;
-  text-align: center;
   cursor: pointer;
-  background: yellowgreen;
+  background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 .file_wrap label:before {
   content: '';
@@ -466,71 +461,81 @@ textarea {
   width: 2px;
   height: 16px;
   transform: translateY(-50%);
-  background: #e8e8e8;
+  background: #ddd;
 }
 
 /* 버튼 */
 .btn {
   border: 1px solid #666;
-  color: var(--txt-color-600);
+  color: var(--gray-600);
   /* 버튼디자인에 아이콘이 포함된 경우
   글자와 아이콘의 높이가 다르면 inline-flex이용하여 버튼을 좌우배치하고 align-items로 수직정렬해줌 */
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 40px;
+  line-height: 40px;
   padding: 0 15px;
   background: none;
 }
+
 .point_btn1 {
-  height: 54px;
-  border: 2px solid #222;
-  border-radius: 27px;
-  padding:0 28px;
+  font-size: 18px;
   font-weight: 700;
-  transition: all 0.5s;
-}
-.point_btn1:hover {
-  background: #222;
   color: #fff;
-}
-.point_btn1:hover::after {
-  background-image: url(../images/btn_arrow_up_white.svg);
+  border: none;
+  width: 200px;
+  line-height: 60px;
+  border-radius: 30px;
+  background: linear-gradient(-30deg, #2AD47D, #008A43);
 }
 .point_btn1::after {
   content: '';
-  transition: all 0.5s;
-  width:24px;
-  height: 24px;
-  background: url(../images/btn_arrow_up.svg) no-repeat 0 0 / 100%;
-  margin-left:5px;
+  width: 17px;
+  height: 17px;
+  background: url(../images/icon_plus.svg) no-repeat 50% 50% / contain;
+  margin-left: 10px;
 }
 
+.point_btn2 {
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+  border: 1px solid #fff;
+  width: 130px;
+  line-height: 40px;
+  border-radius: 20px;
+}
+.point_btn2::after {
+  content: '';
+  width: 20px;
+  height: 10px;
+  background: url(../images/arrow_more.svg) no-repeat left top / 100%;
+  margin-left: 20px;
+}
 
 /* 라벨 버튼 */
 [class*='label_btn'] {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  gap:0 8px;
   height: 40px;
-  border:1px solid #333;
+  border:1px solid #999;
+  padding:0 10px;
 }
-[class*='label_btn']:before {
+[class*='label_btn']::before {
   content: '';
   width: 24px;
   height: 24px;
-  margin-right: 4px;
 }
-.delete_label_btn:before {
-  background: url(./assets/images/delete.svg) no-repeat 0 0 / 100%;
+.delete_label_btn::before {
+  background: url(../images/common/delete.svg) no-repeat 0 0 / 100%;
 }
 .send_label_btn {
   flex-direction: row-reverse;
 }
-.send_label_btn:before {
-  background: url(./assets/images/send.svg) no-repeat 0 0 / 100%;
-  margin-left: 4px;
-  margin-right: 0;
+.send_label_btn::before {
+  background: url(../images/common/send.svg) no-repeat 0 0 / 100%;
 }
 
 /* 아이콘 버튼 */
@@ -538,12 +543,9 @@ textarea {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  text-indent: -9999px;
-  border-radius: 0;
-  border: none;
+  border: 1px solid #999;
   /* 줄간격 초기화하여 아이콘 높이에 따라 높이변경되도록 */
-  line-height: inherit;
-  padding: 10px;
+  padding: 7px;
   background: none;
   margin-right: 0;
 }
@@ -553,10 +555,10 @@ textarea {
   height: 24px;
 }
 .delete_icon_btn:before {
-  background: url(./assets/images/delete.svg) no-repeat 0 0 / 100%;
+  background: url(../images/common/delete.svg) no-repeat 50% 50% / 100%;
 }
 .send_icon_btn:before {
-  background: url(./assets/images/send.svg) no-repeat 0 0 / 100%;
+  background: url(../images/common/send.svg) no-repeat 50% 50% / 100%;
 }
 
 /* 다운로드 버튼 */
@@ -573,85 +575,90 @@ textarea {
   transform: translateY(-1px);
 }
 
-/* 등록하기 아이콘 */
-.reg_icon:after {
-  content: '';
-  display: inline-block;
-  width: 21px;
-  height: 16px;
-  background: url(../images/icon_reg.png) no-repeat;
-  margin-left: 7px;
-}
-
 /* 다운로드 아이콘 */
-[class*='download_icon'] {
+[class*='file_icon'] {
   display: inline-block;
   width: 20px;
   height: 20px;
-  text-indent: -9999px;
-  background: url(../images/sprite_pc_new.png) no-repeat;
+  background: url(../images/common/sprite_pc_new.png) no-repeat;
+  vertical-align: middle;
 }
-.pdf_download_icon {
+.pdf_file_icon {
   background-position-x: -125px;
 }
-.mp4_download_icon {
+.mp4_file_icon {
   background-position-x: 0px;
 }
-.txt_download_icon {
+.txt_file_icon {
   background-position-x: -25px;
 }
-.ppt_download_icon {
+.ppt_file_icon {
   background-position-x: -50px;
 }
-.doc_download_icon {
+.doc_file_icon {
   background-position-x: -75px;
 }
-.xls_download_icon {
+.xls_file_icon {
   background-position-x: -100px;
-}
-
-/* 필수 별 아이콘 */
-.star_icon {
-  display: inline-block;
-  width: 7px;
-  height: 6px;
-  background: url(../images/icon_ess.png) no-repeat;
-  vertical-align: 3px;
-  margin: 0 3px;
 }
 
 /* 플랫폼 아이콘 */
 [class*='device_icon'] {
-  width: 18px;
-  height: 20px;
   display: inline-block;
-  background: url(../images/set_device.png) no-repeat;
+  background: url(../images/common/set_os.svg) no-repeat;
   vertical-align: middle;
-  margin-right: 3px;
 }
-.aos_device_icon {
-  background-position-y: -100px;
+.pc_device_icon {
+  width:20px;
+  height: 18px;
+  background-position: -2px -3px;
 }
-.ios_device_icon {
-  background-position-y: -50px;
+.pc_device_icon:hover {
+  background-position-x:-52px;
+}
+.mobile_device_icon {
+  width:15px;
+  height: 20px;
+  background-position: -4px -52px;
+}
+.mobile_device_icon:hover {
+  background-position-x:-54px;
+}
+.console_device_icon {
+  width:24px;
+  height: 18px;
+  background-position:0 -103px;
+}
+.console_device_icon:hover {
+  background-position-x:-50px;
 }
 
 /* 커뮤니티 아이콘 */
 [class*='sns_icon'] {
-  width: 20px;
-  height: 20px;
   display: inline-block;
-  background: url(../images/set_community.svg) no-repeat;
-  text-indent: -9999px;
+  background: url(../images/common/set_community.svg) no-repeat;
+  vertical-align: middle;
 }
 [class*='sns_icon']:hover {
-  background-position-x: -50px;
+  background-position-x: -52px;
+}
+.forum_sns_icon {
+  width:16px;
+  height: 15px;
+  background-position: -2px -3px;
 }
 .youtube_sns_icon {
-  background-position-y: -50px;
+  width:16px;
+  height: 12px;
+  background-position: -2px -54px;
 }
 .facebook_sns_icon {
-  background-position-y: -100px;
+  width: 14px;
+  height: 14px;
+  background-position: -3px -103px;
+}
+.facebook_sns_icon:hover {
+  background-position-x:-53px;
 }
 
 /* 테이블 캡션 버그 대응 */
@@ -659,48 +666,140 @@ caption.nohead {
   position: static;
 }
 
+/* 게시물 검색 */
+.board_search {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0 20px;
+  margin-bottom: 100px;
+}
+
+.board_search .search_wrap {
+  width: 100%;
+  max-width: 410px;
+  border: none;
+  border-bottom: 1px solid #000;
+  display: flex;
+}
+.board_search input[type=search] {
+  width: calc(100% - 40px);
+  height: 50px;
+  border: none;
+  transition: all 0.3s;
+}
+.board_search input[type=search]:focus {
+  border: 1px solid #07f;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.1)
+
+}
+.board_search .search_btn {
+  width: 40px;
+  height: 50px;
+  border: none;
+  background: transparent url(../images/board_sch_icon.png) no-repeat 50% 50%;
+}
+
+/* board_list: 게시물 리스트, board_view: 게시물 보기, board_write(게시물 쓰기), board_modify(게시물 수정) */
 /* 게시판 리스트 */
-.board_list_wrap {
+.board_list th {
+  height: 70px;
+  color: var(--gray-600);
   border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  font-size: 17px;
 }
-.board_list_wrap th {
-  border-bottom: 1px solid #eee;
-  height: 60px;
-  background: #f5f5f5;
-  color: #000;
-  font-weight: 400;
+.board_list tr:last-child {
+  color: var(--gray-600);
+  font-weight: 700;
 }
-.board_list_wrap td {
-  border-bottom: 1px solid #eee;
-  height: 60px;
+.board_list tr:last-child td {
+  border-bottom: 1px solid #000;
+}
+.board_list tr:nth-last-child(2) td{
+  border-bottom: 1px solid #000;
+}
+.board_list td {
+  height: 50px;
+  color: var(--gray-500);
+  border: 1px solid #eaeaea;
+  font-size: 17px;
+  padding: 15px 20px 15px 5px;
+  text-align: right;
+}
+.board_list td:first-child {
+  border-left: none;
+  padding: 15px 10px;
   text-align: center;
 }
-.board_list_wrap .td_left {
-  text-align: left;
+.board_list td:last-child {
+  border-right: none;
 }
-.board_list_wrap tr:last-child td {
-  border-bottom-color: #ddd;
+
+.board_list .col1,
+.board_list .col3 {
+  width: 30%;
 }
-.board_list_wrap .col01 {
-  width: 10%;
+
+@media (max-width: 1200px) {
+  .board_list th {
+    height: 56px;
+    font-size: 18px;
+  }
 }
-.board_list_wrap .col03 {
-  width: 15%;
+
+@media (max-width: 767px) {
+  .board_list th {
+    height: 44px;
+    font-size: 12px;
+  }
+  .board_list td:first-child {
+    padding: 18px 2px;
+  }
+  .board_list td {
+    height: 56px;
+    font-size: 12px;
+  }
 }
-.board_list_wrap .link {
-  /* 한줄말줄임 - IE대응 */
-  /* 글자 안내려가게 */
-  white-space: nowrap;
-  /* 인라인블럭으로 지정하여 100%가 되지않게 */
+
+/* 칸에서 수직 정렬이 기본값이며 vertical-align: top 등으로 수직정렬 변경 가능 */
+
+
+/* 표의 칸이 3칸일 경우 두칸만 길이를 정하면 나머지 한칸은 알아서 정해짐 */
+
+
+
+
+
+
+/* display: -webkit-box는 가로가 100%이므로 빈 공간도 클릭됨 */
+/* .board_list .link_btn {
+  border: 1px solid red;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+} */
+/* 빈 공간 클릭이 안되도록 한줄 말줄임 */
+.board_list .link_btn {
+  /* 표를 글자 만큼 선택 */
   display: inline-block;
-  /* 자신이 가질수있는 최대크기지정 */
-  max-width: 90%;
+  white-space: nowrap;
+  /* width: 100%를 하면 block element와 다를게 없어지기 때문에 내용에 영향을 받는 max-width를 이용 */
+  max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.board_list_wrap .link:hover {
-  text-decoration: underline;
+
+/* a태그에 줄간격, 폰트관련 기본값이 상속되며 최소크기가 지정되어 줄어들지 않으면 크기를 직접 지정 */
+.board_list .download_btn {
+  padding: 7px 3px;
+  display: inline-block;
+  height: 34px;
 }
+.board_list .download_btn:hover {
+  border-bottom: 1px solid #000;
+}
+
 
 /* 게시판 페이지네이션 */
 .board_pagination_wrap {
